--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ flutter:
     - assets/images/love.png
     - assets/images/sad.png
     - assets/images/arrow.png
+    - assets/images/doggy.png
+    - assets/images/icon1.png
+    - assets/images/icon2.png
+    - assets/images/icon3.png
+    - assets/images/icon4.png
 
 
   # fonts:
